--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         goversion: "1.19"
+        md5sum: FALSE
         project_path: "./cmd/kuberes"
         binary_name: "kuberes"
         extra_files: LICENSE README.md
